# client-iq

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.bak  README.md  docker-compose.yml.bak  files.txt  package-lock.json  package.json  readMe.md  test.html  tsconfig.json
src/: handlers.rs  index.ts  main.rs  services.rs  types.ts
src/config/: config.rs
src/core/: storage.ts
src/database/: db_init.rs
src/handlers/: client_handler.rs
src/intelligence-core/: enrich.ts  index.ts  normalize.ts  risk.ts  sessions.ts  test.ts
src/models/: client.rs
src/realtime/: emitter.ts  events.ts  websockets.ts
src/repositories/: client_repo.rs  device_repo.rs  event_repo.rs
src/services/: client_service.rs
src_backup/: main.rs  models.rs  repositories.rs
src_backup/database/: db_init.rs
src_backup/handlers/: websocket_handler.rs
src_backup/models/: device.rs  event.rs
src_backup/services/: client_service.rs
