[package]
name = "client-iq-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros", "json", "ws"] }
dotenvy = "0.15.7"
futures = "0.3.33"
futures-util = "0.3.33"
mongodb = "3.8.0"
once_cell = "1.21.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
